--- a/crates/common/tedge_config/Cargo.toml
+++ b/crates/common/tedge_config/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.58.1"
 [dependencies]
 certificate = { path = "../certificate" }
 serde = { version = "1.0", features = ["derive"] }
-tedge_utils = { path = "../tedge_utils" }
+tedge_utils = { path = "../tedge_utils", features = ["tedge-derive"] }
 tempfile = "3.2"
 thiserror = "1.0"
 toml = "0.5"
