--- a/crates/core/tedge/Cargo.toml
+++ b/crates/core/tedge/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tedge_config = { path = "../../common/tedge_config" }
 tedge_utils = { path = "../../common/tedge_utils" }
+tracing = { version = "0.1", features = ["attributes", "log"] }
 thiserror = "1.0"
 toml = "0.5"
 url = "2.2"
