--- a/crates/core/tedge_mapper/Cargo.toml
+++ b/crates/core/tedge_mapper/Cargo.toml
@@ -43,6 +43,7 @@ plugin_sm = { path = "../plugin_sm" }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+state = { version = "0.5", features = ["tls"] }
 clap = { version = "3.2", features = ["cargo", "derive"] }
 tedge_api = { path = "../tedge_api" }
 tedge_config = { path = "../../common/tedge_config" }
